@@ -22,13 +22,20 @@ for path in \$DIRS;do
         LD=\$path/parts/part/lib:\$LD
     fi
 done
-for p in "$mt" "$sys" "$path";do
+for p in "$sys" "$path";do
     if [ -d "\$p" ];then
         P=\$p/bin:\$P
         P=\$p/sbin:\$P
         LD=\$p/lib:\$LD
     fi
 done
+for p in "$mt";do
+    if [ -d "\$p" ];then
+        P=\$P:\$p/bin
+        P=\$P:\$p/sbin
+        LD=\$LD:\$p/lib
+    fi
+done 
 PROJECT=${project}
 if [ -n \$OLD_MINITAGE_PATH ];then
     P=\$P:\$OLD_MINITAGE_PATH
